--- a/juspay/package.json
+++ b/juspay/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.13"
   },
